--- a/scss/module_carousel/gridbox-carousel.scss
+++ b/scss/module_carousel/gridbox-carousel.scss
@@ -144,7 +144,7 @@
 
 // --------- slide effect ----------
 
-.carousel-customName {
+.carousel-slide {
     position: relative;
     // width: 300vw;
     overflow-x: scroll;
