--- a/scss/module_carousel/gridbox-carousel.scss
+++ b/scss/module_carousel/gridbox-carousel.scss
@@ -71,6 +71,7 @@
 
         span {
             display: inline-block;
+            position: relative;
             width: 25px;
             height: 5px;
             margin-right: 5px;
@@ -121,6 +122,15 @@
     left: 0;
     top: 0;
     background: rgba(0, 0, 0, 0.2);
+}
+
+.indicator-status-bar {
+    display: block;
+    position: absolute;
+    height: 2px;
+    left: 0;
+    bottom: -2px;
+    background: rgba(0, 0, 0, 0.8);
 }
 
 
