--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -3198,6 +3198,20 @@ a {
     opacity: 0;
     color: #1e88e5; }
 
+.dropdown-list {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  -webkit-box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.2); }
+  .dropdown-list li {
+    padding: 15px 25px;
+    border-bottom: 1px solid #e8e8e8;
+    cursor: pointer; }
+    .dropdown-list li:hover {
+      background: #fff; }
+
 .login-form-container {
   position: fixed;
   top: 50%;
