--- a/scss/module_dropdown/gridbox-dropdown.scss
+++ b/scss/module_dropdown/gridbox-dropdown.scss
@@ -27,11 +27,16 @@
 }
 
 .dropdown-list {
-    position: relative;
+    position: absolute;
     margin: 0;
     padding: 0;
+    width: 100%;
     list-style-type: none;
     box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.2);
+
+    &.hide {
+        display: none;
+    }
     
     li {
         padding: 15px 25px;
