add tab template, stylings and javascript features

--- a/scss/gridbox.scss
+++ b/scss/gridbox.scss
@@ -39,6 +39,7 @@ html {
 @import './module_footer/gridbox-footer';
 @import './module_form/gridbox-form';
 @import './module_dropdown/gridbox-dropdown';
+@import './module_tab/gridbox-tab';
 @import './module_login/gridbox-login';
 
 // load effect modules
