--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -3331,6 +3331,51 @@ a {
   -ms-transform: translate(-80%, -50%) rotate(-135deg) !important;
   transform: translate(-80%, -50%) rotate(-135deg) !important; }
 
+.tab-wrap {
+  padding-left: 30px; }
+
+.tabs {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  overflow: hidden; }
+  .tabs li {
+    position: relative;
+    float: left;
+    padding: 0.5rem 1.5rem;
+    margin-right: 0px;
+    background: #1e88e5;
+    -webkit-transform: translateY(5px);
+    -ms-transform: translateY(5px);
+    transform: translateY(5px);
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1; }
+    .tabs li:hover {
+      background: #1565c0; }
+    .tabs li.active {
+      background: #1565c0;
+      -webkit-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+      transform: translateY(0px);
+      -webkit-box-shadow: 1px 1px 8px -3px rgba(0, 0, 0, 0.3);
+      box-shadow: 1px 1px 8px -3px rgba(0, 0, 0, 0.3);
+      z-index: 3; }
+
+.content-box {
+  padding: 30px;
+  -webkit-box-shadow: 0 2px 10px -8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 10px -8px rgba(0, 0, 0, 0.2); }
+
+.tab-content {
+  display: none; }
+  .tab-content.show {
+    display: block; }
+
 .login-form-container {
   position: fixed;
   top: 50%;
